landingstyle.css
:root {
    --primary-color: #B5E2FA;
    --secondary-color: #0FA3B1;
    --accent1-color: #464655;
    --accent2-color: #A18276;
    --accent3-color: #F9F7F3;
    }
    @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bungee&family=Butcherman&family=Creepster&family=Eater&family=Flavors&family=Karla:ital,wght@0,200..800;1,200..800&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Patrick+Hand&family=Qwitcher+Grypen:wght@400;700&family=Rubik+Wet+Paint&family=Shadows+Into+Light&display=swap');
    body {
        background: #F9F7F3;
    }
/* navigation stuff 
    nav {
        background: #AEB8FE;
        line-height: 100px; 
        text-align: center; 
        font-size: 1.2em; 
    }
    nav a {
        min-width: 120px; 
        text-decoration: none;
        padding: 30px; 
    }
    nav a:link, nav a:visited {
        color: #27187E;
    }
    nav a:hover {
        color: #AEB8FE;
        background-color: #27187E;
    }
*/
    h1 {
        text-align: center;
        font-family: "Patrick Hand", sans-serif;
        font-size: 40px;
        color:#464655;
    }
    h2 {
        text-align: center;
        font-family: "Patrick Hand", sans-serif;
        color:#0FA3B1;
    }

    #landingpagecards {
        display: grid;
        grid-template-columns: 0.5fr repeat(3, 1fr) 0.5fr;
        grid-template-rows: repeat(2, 1fr) 30px;
        grid-column-gap: 30px;
        grid-row-gap: 30px;
    }
    #aboutme {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 1 / 2 / 2 / 3;
    }
    .aboutmeimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }
    #wwrweb {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 1 / 3 / 2 / 4;
    }
    .wwrwebimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }
    #wwrsite {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 1 / 4 / 2 / 5;
    }
    .wwrsiteimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }
    #positioning {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 2 / 2 / 3 / 3;
    }
    .positioningimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }

    #personalweb {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 2 / 3 / 3 / 4;
    }
    .personalwebimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }
    #link :hover {
        border:solid #A18276;
        border-width:10px;
        border-radius: 100px;
        -webkit-transform: scale(0.8);
        -ms-transform: scale(0.8);
        transform: scale(0.8);
        transition: 1s ease;
    }

    #personalsite {
    background-color: #B5E2FA;
    height: 250px; 
    width: 250px;
    padding-top: 30px; 
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    grid-area: 2 / 4 / 3 / 5;
    }
    .personalsiteimg {
        border: solid #464655;
        border-width:10px;
        transition: 1s ease;
    }
    #aboutme, #wwrweb, #wwrsite, #positioning, #personalweb, #personalsite {
    display: flex; 
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    }
    footer { 
        padding: 30px; 
        background: #0FA3B1;
        color: #B5E2FA;
        font-size: 25px;
        font-family:"Patrick Hand", sans-serif;
    }

